--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -170,7 +170,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "XJWwEeYTQYrV",
-        "outputId": "93e7552c-4486-45a5-8a16-42c191ce1055",
+        "outputId": "d5696955-d82c-44ed-d7bc-a95f4845a3de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 433
@@ -374,7 +374,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "TWTn3IxWRmwe",
-        "outputId": "bad5195b-c8aa-45b2-b1c7-46384a9327a9",
+        "outputId": "d3b397e8-636b-44a0-dc7e-f7ac0099586d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -430,7 +430,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "2uR04RC6uWSg",
-        "outputId": "8187c059-b0da-48b9-9bd6-b4101b1e3038",
+        "outputId": "52372339-61c4-4f9d-d57d-d59ebc7e4aca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -473,7 +473,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "WLwBYs27u0Jr",
-        "outputId": "54e6c554-d11c-4e59-9a7d-77740c7f730f",
+        "outputId": "2812b14e-8c37-4029-d587-bfec69e81188",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -542,7 +542,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "BYz5CeLuwvLr",
-        "outputId": "12eb94f8-6614-495a-b9e0-006a24fe62a4",
+        "outputId": "72b4c599-6b79-4f7b-9cbf-b37ea29d1522",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -568,7 +568,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "QesjRViivYoC",
-        "outputId": "0a35db7e-e69a-4b6a-bbb6-77e23b1cc597",
+        "outputId": "b5dcc7ee-138d-48a8-f016-eebecab6f1a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
@@ -625,7 +625,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "sw0RBoulwNx8",
-        "outputId": "7c6c9691-c2e9-465e-85a0-d2d58cc50968",
+        "outputId": "6ec8ead4-7326-4d77-d827-432a9f05e3d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -670,7 +670,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "KruBXjylybxK",
-        "outputId": "3dcb4edd-b2aa-4786-db09-4e776bfe5865",
+        "outputId": "ccfbea64-130a-431b-ec7e-adec11ceb412",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -715,7 +715,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "EW2Y-MYFy0V2",
-        "outputId": "3acdcb2f-f80d-49d1-a27d-b23392df0491",
+        "outputId": "76329c4e-c865-4b6e-c89c-1ad0c4fa014f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -760,7 +760,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "JV9DvO4fzsH4",
-        "outputId": "74adca34-c5c6-4bc1-cea0-2d6bfad50e2d",
+        "outputId": "09094b49-031c-4d12-d384-6ac703f4e7c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -805,7 +805,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "O9rfnWnaz6qL",
-        "outputId": "4d25f1c8-3515-4e7a-b101-dbbc76fcd9e9",
+        "outputId": "f6f629f2-5c40-4ca5-9d51-52f7ada43d34",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -850,7 +850,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "PVMbbt2l0l5p",
-        "outputId": "0566a423-59c2-4ea7-995b-52de2cb9e524",
+        "outputId": "4a4078c8-c593-4ddd-be56-2d831342bcc8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -895,7 +895,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "I3jVMrKUy9C3",
-        "outputId": "61e1764f-eaa2-4035-9634-239de1ae5ac3",
+        "outputId": "4fc97104-091d-4e9c-c813-95254b7d30ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -970,102 +970,102 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>2019-03-14</th>\n",
-              "      <td>4</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>4</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>11413.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>3,217</td>\n",
-              "      <td>1472.0</td>\n",
-              "      <td>1930.0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2019-01-18</th>\n",
-              "      <td>4</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>33</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>11423.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>5,280</td>\n",
-              "      <td>1976.0</td>\n",
-              "      <td>1925.0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2019-04-01</th>\n",
-              "      <td>4</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>37</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>11433.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>1,875</td>\n",
-              "      <td>1386.0</td>\n",
-              "      <td>1925.0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2019-01-31</th>\n",
-              "      <td>4</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>9</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>11428.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>3,000</td>\n",
-              "      <td>1691.0</td>\n",
-              "      <td>1930.0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2019-01-25</th>\n",
+              "      <th>2019-04-10</th>\n",
               "      <td>5</td>\n",
               "      <td>0.0</td>\n",
               "      <td>1.0</td>\n",
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>58</td>\n",
+              "      <td>6</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>10306.0</td>\n",
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>1.0</td>\n",
-              "      <td>6,612</td>\n",
-              "      <td>2384.0</td>\n",
-              "      <td>1960.0</td>\n",
+              "      <td>2,000</td>\n",
+              "      <td>1300.0</td>\n",
+              "      <td>2004.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-02-15</th>\n",
+              "      <td>3</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>159</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>11238.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1,546</td>\n",
+              "      <td>1372.0</td>\n",
+              "      <td>1899.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-02-25</th>\n",
+              "      <td>3</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>26</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>11203.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2,500</td>\n",
+              "      <td>952.0</td>\n",
+              "      <td>1925.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-02-19</th>\n",
+              "      <td>3</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>25</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>11228.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2,200</td>\n",
+              "      <td>1408.0</td>\n",
+              "      <td>1925.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-03-29</th>\n",
+              "      <td>3</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>11234.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2,000</td>\n",
+              "      <td>1400.0</td>\n",
+              "      <td>1925.0</td>\n",
               "      <td>1</td>\n",
               "      <td>0.0</td>\n",
               "    </tr>\n",
@@ -1076,11 +1076,11 @@
             "text/plain": [
               "           BOROUGH  ...  BUILDING_CLASS_AT_TIME_OF_SALE\n",
               "SALE_DATE           ...                                \n",
-              "2019-03-14       4  ...                             0.0\n",
-              "2019-01-18       4  ...                             0.0\n",
-              "2019-04-01       4  ...                             0.0\n",
-              "2019-01-31       4  ...                             0.0\n",
-              "2019-01-25       5  ...                             0.0\n",
+              "2019-04-10       5  ...                             0.0\n",
+              "2019-02-15       3  ...                             0.0\n",
+              "2019-02-25       3  ...                             0.0\n",
+              "2019-02-19       3  ...                             0.0\n",
+              "2019-03-29       3  ...                             0.0\n",
               "\n",
               "[5 rows x 17 columns]"
             ]
@@ -1096,7 +1096,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "xlkab9lp0WYm",
-        "outputId": "2cbff713-572b-47f5-ff04-6bd6a0023484",
+        "outputId": "d09c787f-6bf1-4d6a-8b54-3fbb1287047f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -1133,7 +1133,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ykJMzoQx0EC6",
-        "outputId": "76bfd790-21b1-4524-f1d6-200019794b04",
+        "outputId": "151ff8d0-9f18-4300-e28e-a73f621e50cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -1179,7 +1179,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "72M0njoRy_dS",
-        "outputId": "51c454f9-42ee-42f1-a604-0c5be3c4fcb3",
+        "outputId": "381675a2-eaad-4a3f-e17c-67b1502db998",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 248
@@ -1203,7 +1203,7 @@
         {
           "output_type": "stream",
           "text": [
-            "The selected features:  Index(['TAX_CLASS_AT_PRESENT', 'ZIP_CODE', 'TOTAL_UNITS', 'LAND_SQUARE_FEET',\n",
+            "The selected features:  Index(['ZIP_CODE', 'COMMERCIAL_UNITS', 'TOTAL_UNITS', 'LAND_SQUARE_FEET',\n",
             "       'GROSS_SQUARE_FEET'],\n",
             "      dtype='object')\n"
           ],
@@ -1258,9 +1258,9 @@
       },
       "source": [
         "# Chose what features to use\n",
-        "X_train = X_train[['ZIP_CODE', 'COMMERCIAL_UNITS', 'TOTAL_UNITS', 'LAND_SQUARE_FEET',\n",
+        "X_train = X_train[['ZIP_CODE', 'TAX_CLASS_AT_PRESENT', 'TOTAL_UNITS', 'LAND_SQUARE_FEET',\n",
         "       'GROSS_SQUARE_FEET']]\n",
-        "X_test = X_test[['ZIP_CODE', 'COMMERCIAL_UNITS', 'TOTAL_UNITS', 'LAND_SQUARE_FEET',\n",
+        "X_test = X_test[['ZIP_CODE', 'TAX_CLASS_AT_PRESENT', 'TOTAL_UNITS', 'LAND_SQUARE_FEET',\n",
         "       'GROSS_SQUARE_FEET']]"
       ],
       "execution_count": 28,
@@ -1270,7 +1270,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Ho2uEJJi4q9R",
-        "outputId": "eb462a8c-318c-42f0-db68-e2164c5bd150",
+        "outputId": "97f254c4-d440-4e2e-ea60-97beca562955",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 177
@@ -1320,7 +1320,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "1Accr9DW6IJW",
-        "outputId": "58bf0ba6-1ffb-4951-b949-99dadd56dfaa",
+        "outputId": "a7153627-e345-4131-b5d5-0da6ff37ccd4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1336,7 +1336,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Mean Absolute Error:  188938.27505670037\n"
+            "Mean Absolute Error:  193850.08648659705\n"
           ],
           "name": "stdout"
         }
@@ -1358,7 +1358,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "SJAOlXop7x9D",
-        "outputId": "c5c504b9-380f-4dd8-dc7a-f5a9993d5a1a",
+        "outputId": "eae4ae78-a272-426c-d9e1-80ea1ed46942",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1374,7 +1374,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Mean Absolute Error:  215298.26850332215\n"
+            "Mean Absolute Error:  238605.85013739066\n"
           ],
           "name": "stdout"
         }
@@ -1424,7 +1424,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "dzDW_kqxKPXB",
-        "outputId": "5b789a39-2b67-4253-cfeb-730d6bd8b6bb",
+        "outputId": "5d92649c-e47a-4c00-ed35-64197bfe3da2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1464,7 +1464,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "MksU559KKa9z",
-        "outputId": "4536e9d2-b685-47b8-e4f8-3fa7326aa78e",
+        "outputId": "be6acb7f-9c3b-419f-f9d5-0ce1e26335a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1478,7 +1478,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Mean Absolute Error:  188938.27505670037\n"
+            "Mean Absolute Error:  193850.08648659705\n"
           ],
           "name": "stdout"
         }
@@ -1504,14 +1504,14 @@
         "ridge_model = make_pipeline(PolynomialFeatures(5),\n",
         "                           RidgeCV(normalize=True, alphas=(0.1, 1.0, 10.0)))"
       ],
-      "execution_count": 40,
+      "execution_count": 39,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "9AMSVe0nLHW4",
-        "outputId": "f8fe5178-513d-4d10-b335-bf24626f367a",
+        "outputId": "d1077206-5910-4fe3-be92-4ea4448037d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 177
@@ -1520,7 +1520,7 @@
       "source": [
         "ridge_model.fit(X_train, y_train)"
       ],
-      "execution_count": 41,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1540,7 +1540,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 40
         }
       ]
     },
@@ -1552,14 +1552,14 @@
       "source": [
         "ridgecv = ridge_model.predict(X_test)"
       ],
-      "execution_count": 42,
+      "execution_count": 41,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "M3BvwrmBLZEa",
-        "outputId": "f0617e1b-f733-4630-bff4-ba23e116b348",
+        "outputId": "3edfe307-4a69-4cde-b268-0f071c8e1e30",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1568,12 +1568,12 @@
       "source": [
         "print(\"Mean Absolute Error: \", metrics.mean_absolute_error(y_test, ridgecv))"
       ],
-      "execution_count": 43,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mean Absolute Error:  186229.37364229906\n"
+            "Mean Absolute Error:  195435.0253963002\n"
           ],
           "name": "stdout"
         }
@@ -1587,7 +1587,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
     }
   ]
