--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -104,7 +104,7 @@
         "import warnings\n",
         "warnings.filterwarnings(action='ignore', category=FutureWarning, module='numpy')"
       ],
-      "execution_count": 1,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
         "    .astype(int)\n",
         ")"
       ],
-      "execution_count": 2,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -145,7 +145,7 @@
         "# so convert it from a number to a string\n",
         "df['BOROUGH'] = df['BOROUGH'].astype(str)"
       ],
-      "execution_count": 3,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -163,14 +163,14 @@
         "# replace the neighborhood with 'OTHER'\n",
         "df.loc[~df['NEIGHBORHOOD'].isin(top10), 'NEIGHBORHOOD'] = 'OTHER'"
       ],
-      "execution_count": 4,
+      "execution_count": 67,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "XJWwEeYTQYrV",
-        "outputId": "1506bf1b-f6cb-45f6-a1fd-0e6f9c162223",
+        "outputId": "e5b71841-f94f-4e24-d30b-fdf974c632ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 433
@@ -180,7 +180,7 @@
         "# Read DataFrame head\n",
         "df.head()"
       ],
-      "execution_count": 5,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -366,7 +366,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 68
         }
       ]
     },
@@ -374,7 +374,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "TWTn3IxWRmwe",
-        "outputId": "8f842cd9-e093-4f81-9800-1adb97e81f13",
+        "outputId": "da5c26f5-ecd6-4fdc-9a43-0a392f9aa29d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -384,7 +384,7 @@
         "# Read shape\n",
         "df.shape"
       ],
-      "execution_count": 6,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -396,7 +396,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 69
         }
       ]
     },
@@ -410,7 +410,7 @@
         "df['SALE_DATE'] = pd.to_datetime(df['SALE_DATE'])\n",
         "df = df.set_index('SALE_DATE')"
       ],
-      "execution_count": 7,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -423,14 +423,14 @@
         "condition1 = df['BUILDING_CLASS_CATEGORY'] == '01 ONE FAMILY DWELLINGS'\n",
         "df = df[condition1]"
       ],
-      "execution_count": 8,
+      "execution_count": 71,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "2uR04RC6uWSg",
-        "outputId": "e0c38944-5dd9-4983-80eb-a657d4c1f424",
+        "outputId": "020a8c0d-63f1-4ccd-e5f3-18c51386097c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -440,7 +440,7 @@
         "# See shape\n",
         "df.shape"
       ],
-      "execution_count": 9,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -452,7 +452,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 72
         }
       ]
     },
@@ -466,14 +466,14 @@
         "condition2 = (df['SALE_PRICE'] > 1000) & (df['SALE_PRICE'] < 2000000)\n",
         "df = df[condition2]"
       ],
-      "execution_count": 10,
+      "execution_count": 73,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "WLwBYs27u0Jr",
-        "outputId": "ef6917ac-c383-4b32-f710-0c6407f8505a",
+        "outputId": "5e994a28-6ced-4527-c12d-2269735dc04e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -483,7 +483,7 @@
         "# See the shape\n",
         "df.shape"
       ],
-      "execution_count": 11,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -495,7 +495,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 74
         }
       ]
     },
@@ -509,8 +509,37 @@
         "df = df.drop('EASE-MENT', axis=1)\n",
         "df =df.drop('APARTMENT_NUMBER', axis=1)"
       ],
-      "execution_count": 12,
+      "execution_count": 75,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xQwI6EqBhka8",
+        "outputId": "71919265-dc86-4233-b50e-66a632c8e7fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "df.shape"
+      ],
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(3203, 18)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 76
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -521,7 +550,7 @@
         "X = df.drop('SALE_PRICE', axis=1)\n",
         "y = df['SALE_PRICE']"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -532,10 +561,10 @@
       "source": [
         "cutoff = ((X.index.month >= 1) & ((X.index.month <= 3)))\n",
         "\n",
-        "X_train = X[cutoff]\n",
+        "X_train_l = X[cutoff]\n",
         "y_train = y[cutoff]"
       ],
-      "execution_count": 14,
+      "execution_count": 78,
       "outputs": []
     },
     {
@@ -546,49 +575,20 @@
       "source": [
         "cutoff_t = ((X.index.month >= 4))\n",
         "\n",
-        "X_test = X[cutoff]\n",
+        "X_test_l = X[cutoff]\n",
         "y_test = y[cutoff]"
       ],
-      "execution_count": 15,
+      "execution_count": 79,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BYz5CeLuwvLr",
-        "outputId": "6e8513d7-9011-4fad-bb32-6a28fc229305",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 72
-        }
+        "id": "MdGSV7vn_4pN"
       },
       "source": [
-        "import numpy as np\n",
-        "neighborhoods = X_train.NEIGHBORHOOD[:, np.newaxis]"
-      ],
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:2: FutureWarning: Support for multi-dimensional indexing (e.g. `obj[:, None]`) is deprecated and will be removed in a future version.  Convert to a numpy array before indexing instead.\n",
-            "  \n"
-          ],
-          "name": "stderr"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "MdGSV7vn_4pN",
-        "outputId": "b5777001-4dff-4875-cc55-c0ab1c757242",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 444
-        }
-      },
-      "source": [
+        "X_train = X_train_l.copy()\n",
+        "X_test = X_test_l.copy()\n",
         "# Remove commas\n",
         "X_train['LAND_SQUARE_FEET']= X_train['LAND_SQUARE_FEET'].str.replace(',', '')\n",
         "X_test['LAND_SQUARE_FEET']= X_test['LAND_SQUARE_FEET'].str.replace(',', '')\n",
@@ -596,48 +596,17 @@
         "X_train['LAND_SQUARE_FEET'] = X_train['LAND_SQUARE_FEET'].astype(int)\n",
         "X_test['LAND_SQUARE_FEET']= X_test['LAND_SQUARE_FEET'].astype(int)"
       ],
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  This is separate from the ipykernel package so we can avoid doing imports until\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \"\"\"\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 80,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "iCb4M29X_MuE",
-        "outputId": "f2558562-8990-4df7-c632-f092cc90edfa",
+        "outputId": "f18dbe52-58d2-45cb-feac-db537ce1014e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 124
+          "height": 88
         }
       },
       "source": [
@@ -651,13 +620,11 @@
         "ohe.fit(X_test)\n",
         "X_test = ohe.transform(X_test)"
       ],
-      "execution_count": 18,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-            "  import pandas.util.testing as tm\n",
             "/usr/local/lib/python3.6/dist-packages/category_encoders/utils.py:21: FutureWarning: is_categorical is deprecated and will be removed in a future version.  Use is_categorical_dtype instead\n",
             "  elif pd.api.types.is_categorical(cols):\n",
             "/usr/local/lib/python3.6/dist-packages/category_encoders/utils.py:21: FutureWarning: is_categorical is deprecated and will be removed in a future version.  Use is_categorical_dtype instead\n",
@@ -671,7 +638,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "I3jVMrKUy9C3",
-        "outputId": "46ff9d13-cf55-4da3-9a82-e93b333ffc06",
+        "outputId": "69f77578-919f-4ec4-f465-321679b86ef6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 391
@@ -681,7 +648,7 @@
         "# See how the training data looks\n",
         "X_train.head()"
       ],
-      "execution_count": 19,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1313,7 +1280,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 82
         }
       ]
     },
@@ -1349,7 +1316,7 @@
         "\n",
         "print(\"The selected features: \", selected_feature)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1401,7 +1368,7 @@
         "ridge_model = make_pipeline(PolynomialFeatures(10),\n",
         "                           Ridge(normalize=True, alpha=0.03))\n"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1420,7 +1387,7 @@
         "       'LAND_SQUARE_FEET', 'GROSS_SQUARE_FEET',\n",
         "       'BUILDING_CLASS_AT_TIME_OF_SALE_A3']]"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1437,7 +1404,7 @@
         "# Fit model\n",
         "ridge_model.fit(X_train, y_train)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1470,7 +1437,7 @@
         "# Predict\n",
         "yfit_ridge = ridge_model.predict(X_test)"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1488,7 +1455,7 @@
         "from sklearn import metrics\n",
         "print(\"Mean Absolute Error: \", metrics.mean_absolute_error(y_test, yfit_ridge))"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1508,7 +1475,7 @@
         "# Make the Baseline\n",
         "baseline = [y_test.mean()] * len(y_test)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1526,7 +1493,7 @@
         "from sklearn import metrics\n",
         "print(\"Mean Absolute Error: \", metrics.mean_absolute_error(y_test, baseline))"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1563,7 +1530,7 @@
       "source": [
         "from sklearn.linear_model import LinearRegression"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1574,7 +1541,7 @@
       "source": [
         "model = LinearRegression()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1590,7 +1557,7 @@
       "source": [
         "model.fit(X_train, y_train)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1614,7 +1581,7 @@
       "source": [
         "yfit_linear = ridge_model.predict(X_test)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1630,7 +1597,7 @@
       "source": [
         "print(\"Mean Absolute Error: \", metrics.mean_absolute_error(y_test, yfit_linear))"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1638,6 +1605,35 @@
             "Mean Absolute Error:  158902.04226238336\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eQQPpX7gaoGy",
+        "outputId": "04766f05-5e69-459a-bef7-8f51001b0e88",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "metrics.r2_score(y_test, yfit_linear)"
+      ],
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.44169551505872173"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 83
         }
       ]
     },
@@ -1661,7 +1657,7 @@
         "ridge_model = make_pipeline(PolynomialFeatures(10),\n",
         "                           RidgeCV(normalize=True, alphas=(0.1, 1.0, 10.0)))"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1677,7 +1673,7 @@
       "source": [
         "ridge_model.fit(X_train, y_train)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1709,7 +1705,7 @@
       "source": [
         "ridgecv = ridge_model.predict(X_test)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1725,7 +1721,7 @@
       "source": [
         "print(\"Mean Absolute Error: \", metrics.mean_absolute_error(y_test, ridgecv))"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1744,7 +1740,7 @@
       "source": [
         ""
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     }
   ]
